# HuYanReader

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  deploy.bat  tiezi.md
include/QHotkey/: qhotkey.lib
lib/QHotkey/: qhotkey_static.lib  qhotkey_static_mt.lib  qhotkey_static_release.lib
lib/qpropertybrowser/: QtSolutions_PropertyBrowser-head.exp  QtSolutions_PropertyBrowser-head.lib
resources/: mainwindow.qrc
resources/rules/: test-rules.json
src/: SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  TextDocumentModel.cpp  TextDocumentModel.h  TextReaderManager.cpp  TextReaderManager.h  TextReaderView.cpp  TextReaderView.h  WebEngineView.cpp  WebEngineView.h  chapterdialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h
src/config/: NovelConfig.cpp  NovelConfig.h  NovelSettingsDialog.cpp  NovelSettingsDialog.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  settings.cpp  settings.h
src/core/: TextDocumentModel.cpp  TextDocumentModel.h  TextReaderManager.cpp  TextReaderManager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc
src/network/: HttpClient.cpp  HttpClient.h
src/novel/: ChapterDownloader.cpp  ChapterDownloader.h  FileGenerator.cpp  FileGenerator.h  NovelModels.cpp  NovelModels.h  NovelSearchManager.cpp  NovelSearchManager.h  NovelSearcher.cpp  NovelSearcher.h
src/parser/: ContentParser.cpp  ContentParser.h  LexborHtmlParser.cpp  LexborHtmlParser.h  RuleManager.cpp  RuleManager.h
src/ui/: NovelSearchViewEnhanced.cpp  NovelSearchViewEnhanced.h  TextReaderView.cpp  TextReaderView.h  WebEngineView.cpp  WebEngineView.h  chapterdialog.h
